# c-cpp-course

./: .travis.yml  README.md
iz_1/: CMakeLists.txt  cDate.c  cDate.h  date.c  date.h  main.c  test.c  test.cpp  test.h
iz_2/: CMakeLists.txt  README.md  dynamic.c  dynamic.h  errors.h  file.txt  header.h  helper_func.c  helper_func.h  hepler_func.c  hepler_func.h  main.c  reader.c  reader.h  static.c  static.h  test.cpp
iz_2/test_files/: test1.txt  test2.txt  test3.txt  test4.txt
